--- a/kuin_type_bridge.vcxproj.filters
+++ b/kuin_type_bridge.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\convert.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\convert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
